--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ em{font-style: normal}
 input{line-height:auto;vertical-align:middle;}
 strong.more{color:#c30}a{text-decoration: none;}
 body {
-	font-family: telegraf;
+	font-family: ;
 }
 * {
 	-webkit-box-sizing: border-box;
@@ -30,7 +30,7 @@ body {
 }
 :root {
     --color-main: #2B373C;
-    --color-accent: #24b4c4;
+    --color-accent: #B50000;
     --color-conversion: #f39638;
     --color-unread-part: #d4d1d8;
     --color-white: #fbfbfb;
@@ -113,7 +113,7 @@ h1 {
   display: flex;
 }
 .feeling-message h2{
-  font-size: 60px;
+  font-size: 70px;
   font-weight: bold;
   padding-right: 200px;
 }
@@ -124,24 +124,142 @@ h1 {
 .base-card {
   background-color: var(--color-main);
   color: white;
-  padding-top: 60px;
+  padding: 100px 0 100px 0;
 }
+
+.head-3 {
+  margin-left: 100px;
+}
+
+h3 {
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.head-3 p{
+  font-size: 20px;
+}
+
 .content {
   display: flex;
-}
-.wrapper {
-  display: flex;
-  flex-wrap: wrap;
   justify-content: center;
+  flex-wrap: wrap;
+  font-size: 20px;
 }
-.item {
-  margin: 0 20px 40px 0;
-  box-shadow: 0 10px 10px 0 white;
+
+.wrapper {
+  width: 450px;
+  justify-content: center;
+  margin: 60px 60px 40px 60px;
+}
+
+summary {
+  font-size: 30px;
+  font-weight: bold;
+  margin: 15px 0 15px 0;
 }
 .item img{
   border-style: none;
   display: block;
   width: 100%;
-  height: 200px;
+  height: 300px;
   object-fit: cover;
+}
+.base-card-white {
+  padding: 100px 0 100px 0;
+}
+
+.message-theme {
+  display: flex;
+  padding-top: 50px;
+  justify-content: center;
+  align-items: center;
+}
+.message-theme img{
+  width: 200;
+  height: 300px;
+  object-fit: cover;
+  margin-right: 30px;
+}
+.message-theme h4{
+  font-size: 30px;
+  font-weight: bold;
+  margin-left: 30px;
+}
+
+button {
+  padding: 0;
+  font-family: inherit;
+  appearance: none;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  display: contents;
+  justify-content: center;
+}
+
+.contact-bottom {
+  display: flex;
+  justify-content: center;
+  margin-top: 80px;
+}
+
+/* ボタンのスタイル */
+.buttonOutlineGradient {
+  position: relative;
+  display: block;
+  width: 100%;
+  max-width: 320px;
+  height: 64px;
+  padding: 2px;
+  font-family: sans-serif;
+  font-size: 16px;
+  text-align: center;
+  overflow-wrap: anywhere;
+  background: var(--color-white);
+  border-radius: 32px; /* (buttonの高さ / 2) の値 */
+}
+
+.buttonOutlineGradient::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  content: "";
+  background: linear-gradient(135deg, #6fa24a, #15a1cc);
+  filter: blur(8px);
+  border-radius: 32px; /* (buttonの高さ / 2) の値 */
+  opacity: 0;
+}
+
+.buttonOutlineGradient_item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  background-color: #222;
+  border-radius: 32px; /* (buttonの高さ / 2) の値 */
+}
+
+@media (any-hover: hover) {
+  .buttonOutlineGradient::before {
+    transition: opacity 0.2s;
+    will-change: filter;
+  }
+
+  .buttonOutlineGradient:hover::before {
+    opacity: 1;
+  }
+footer {
+  height: 100px;
+}
+
+footer p{
+  text-align: center;
+  padding-top: 60px;
 }
